tests/files/type_checker_tests/should_fail/036.cmdr
//Should fail when multiplying incompatible types
x = 3 * false;
